<resources>
    <string name="app_name">AppOrderFood</string>
    <string name="tendangnhap">Tên Đăng Nhập</string>
    <string name="matkhau">Mật Khẩu</string>
    <string name="gtNam">Nam</string>
    <string name="gtNu">Nữ</string>
    <string name="ngaysinh">Ngày Sinh</string>
    <string name="cancuoccongdan">Căn Cước Công Dân</string>
    <string name="dongy">Đồng Ý</string>
    <string name="thoat">Thoát</string>
    <string name="dangky">Đăng Ký</string>
    <string name="dangnhap">Đăng Nhập</string>
    <string name="trangchu">Trang chủ</string>
    <string name="thucdon">Thực Đơn</string>
    <string name="nhanvien">Nhân Viên</string>
    <string name="caidat">Cài Đặt</string>
    <string name="thongke">Thống Kê</string>
    <string name="mo">Mở</string>
    <string name="dong">Đóng</string>
    <string name="loinhaptendangnhap">Vui lòng nhập tên đăng nhập!</string>
    <string name="loinhapmatkhau">Vui lòng nhập mật khẩu!</string>
    <string name="themthanhcong">Thêm thành công</string>
    <string name="themthatbai">Thêm thất bại</string>
    <string name="thembanan">Thêm Bàn Ăn</string>
    <string name="tenbanan">Tên Bàn Ăn</string>
    <string name="themthucdon">Thêm Thực Đơn</string>
    <string name="tenmonan">Tên Món Ăn</string>
    <string name="giatien">Giá Tiền</string>
    <string name="banan">Bàn Ăn</string>
    <string name="loaithucdon">Loại Thực Đơn</string>
    <string name="tenloaithucdon">Tên Loại</string>
    <string name="vuilongnhapdulieu">Vui lòng nhập dữ liệu</string>
    <string name="chonhinhthucdon">Chọn Hình Thực Đơn</string>
    <string name="nhapthongtinmonan">Vui lòng nhập thông tin tên và giá món ăn</string>
    <string name="mucgia">Giá Tiền: </string>
    <string name="soluongmonan">Số Lượng</string>
    <string name="dongia">Đơn Giá</string>
    <string name="tongtienthanhtoan">Tổng Tiền: </string>
    <string name="thanhtoan">Thanh Toán</string>
    <string name="thanhtoanthanhcong">Thanh Toán Thành Công</string>
    <string name="xoathanhcong">Xóa Thành Công</string>
    <string name="suathanhcong">Sửa Thành Công</string>
    <string name="loi">Lỗi</string>
    <string name="sua">Sửa</string>
    <string name="xoa">Xóa</string>
    <string name="themnhanvien">Thêm Nhân Viên</string>
    <string name="capnhatnhanvien">Cập Nhật Nhân Viên</string>
    <string name="capnhatmonan">Cập Nhật Món Ăn</string>
</resources>