<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size10dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/txtTenMonAnThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenmonan"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:padding="@dimen/size5dp"
            />

        <TextView
            android:id="@+id/txtSoLuongThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soluongmonan"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:padding="@dimen/size5dp"
            />

        <TextView
            android:id="@+id/txtGiaTienThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dongia"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:padding="@dimen/size5dp"
            />

    </LinearLayout>

</LinearLayout>