<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTieuDeThemMonAn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/size10dp"
        android:text="@string/themthucdon"
        android:textSize="@dimen/size18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size250dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edThemTenMonAn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size5dp"
                android:background="@color/white"
                android:hint="@string/tenmonan"
                android:padding="@dimen/size5dp"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/size18sp" />

            <EditText
                android:id="@+id/edThemGiaTien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size5dp"
                android:background="@color/white"
                android:hint="@string/giatien"
                android:numeric="integer"
                android:padding="@dimen/size5dp"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/size18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinLoaiMonAn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size10dp"
                    android:layout_weight="1"
                    android:padding="@dimen/size10dp"
                    android:spinnerMode="dialog"/>

                <ImageButton
                    android:id="@+id/imThemLoaiThucDon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_input_add" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imHinhThucDon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size150dp"
            android:layout_weight="1"
            android:src="@drawable/backgroundheader1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDongYThemMonAn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:padding="@dimen/size10dp"
            android:text="@string/dongy" />

        <Button
            android:id="@+id/btnThoatThemMonAn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:padding="@dimen/size10dp"
            android:text="@string/thoat" />

    </LinearLayout>
</LinearLayout>